--- a/app/src/main/res/layout/create_routine.xml
+++ b/app/src/main/res/layout/create_routine.xml
@@ -1,6 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    >
+
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="15sp"
+        />
+
+    <TextView
+        android:id="@+id/workoutName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor = "@color/black"
+        android:layout_gravity="center"
+        android:textStyle="bold"
+        android:textSize="35sp"
+        />
+
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="0.1sp"
+        android:layout_margin="20sp"
+        android:background="@color/black"
+    />
+
+</LinearLayout>
