--- a/app/src/main/res/layout/exercise_item.xml
+++ b/app/src/main/res/layout/exercise_item.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     >
 
     <CheckBox
         android:id="@+id/checkBox"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-        android:layout_toLeftOf="@+id/exerciseName" />
+        />
 
     <TextView
         android:id="@+id/exerciseName"
@@ -20,4 +19,4 @@
         android:layout_height="wrap_content"
         android:textColor="@color/black" />
 
-</RelativeLayout>
+</LinearLayout>
