--- a/app/src/main/res/layout/create_routine.xml
+++ b/app/src/main/res/layout/create_routine.xml
@@ -4,8 +4,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical"
     >
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/routineToolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/toolbar"
+        android:minHeight="?attr/actionBarSize"
+        />
 
     <View
         android:layout_width="wrap_content"
