--- a/app/src/main/res/layout/exercise_item.xml
+++ b/app/src/main/res/layout/exercise_item.xml
@@ -4,11 +4,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="horizontal"
     >
 
     <CheckBox
         android:id="@+id/checkBox"
+        android:buttonTint="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
