--- a/app/src/main/res/layout/exercise_popup.xml
+++ b/app/src/main/res/layout/exercise_popup.xml
@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="@color/white"
+    android:orientation="vertical"
     >
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/popupToolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/toolbar"
+        android:minHeight="?attr/actionBarSize"
+        />
 
     <ListView
         android:id="@+id/exerciseList"
@@ -13,7 +22,6 @@
         android:layout_height="match_parent"
         >
 
-
     </ListView>
 
-</RelativeLayout>
+</LinearLayout>
