--- a/app/src/main/res/layout/exercise_item.xml
+++ b/app/src/main/res/layout/exercise_item.xml
@@ -12,13 +12,13 @@
         android:id="@+id/checkBox"
         android:buttonTint="@color/black"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         />
 
     <TextView
         android:id="@+id/exerciseName"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:textColor="@color/black" />
 
 </LinearLayout>
