--- a/app/src/main/res/layout/workout_item.xml
+++ b/app/src/main/res/layout/workout_item.xml
@@ -3,17 +3,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
     android:layout_marginBottom="16dp"
-    android:padding="15dp"
-    android:orientation="vertical">
+    android:background="@color/white"
+    android:orientation="vertical"
+    android:padding="15dp">
 
     <TextView
         android:id="@+id/exerciseName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textColor="@color/black" />
+        android:textColor="@color/black"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,15 +24,24 @@
             android:id="@+id/reps"
             android:layout_width="0dp"
             android:layout_height="40dp"
-            android:layout_weight="0.5"
+            android:layout_weight="0.4"
             android:text="Reps: "
             android:textColor="@color/black" />
+
 
         <EditText
             android:id="@+id/repEntry"
             android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_weight="1" />
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:backgroundTint="@color/gray"
+            android:hint="Enter reps"
+            android:textColorHint="@color/gray"
+            android:textSize="12sp" />
+
+        <View
+            android:layout_width="8dp"
+            android:layout_height="match_parent" />
 
         <TextView
             android:id="@+id/weight"
@@ -43,11 +52,16 @@
             android:text="Weight: "
             android:textColor="@color/black" />
 
+
         <EditText
             android:id="@+id/weightEntry"
             android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_weight="1" />
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:backgroundTint="@color/gray"
+            android:hint="Enter weight"
+            android:textColorHint="@color/gray"
+            android:textSize="12sp" />
 
     </LinearLayout>
 
