--- a/app/src/main/res/layout/workout_item.xml
+++ b/app/src/main/res/layout/workout_item.xml
@@ -37,7 +37,8 @@
             android:backgroundTint="@color/gray"
             android:hint="Enter reps"
             android:textColorHint="@color/gray"
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            android:textColor="@color/black"/>
 
         <View
             android:layout_width="8dp"
@@ -50,7 +51,8 @@
             android:layout_toRightOf="@id/reps"
             android:layout_weight="0.5"
             android:text="Weight: "
-            android:textColor="@color/black" />
+            android:textColor="@color/black"
+            />
 
 
         <EditText
@@ -61,7 +63,8 @@
             android:backgroundTint="@color/gray"
             android:hint="Enter weight"
             android:textColorHint="@color/gray"
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            android:textColor="@color/black"/>
 
     </LinearLayout>
 
