--- a/app/src/main/res/layout/create_routine.xml
+++ b/app/src/main/res/layout/create_routine.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/black"
     android:orientation="vertical"
     >
 
@@ -12,7 +12,7 @@
         android:id="@+id/routineToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/toolbar"
+        android:background="@color/dark_gray"
         android:minHeight="?attr/actionBarSize"
         />
 
@@ -25,7 +25,7 @@
         android:id="@+id/workoutName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor = "@color/black"
+        android:textColor = "@color/white"
         android:layout_gravity="center"
         android:textStyle="bold"
         android:textSize="35sp"
@@ -35,7 +35,7 @@
         android:layout_width="fill_parent"
         android:layout_height="1sp"
         android:layout_margin="20sp"
-        android:background="@color/black"
+        android:background="@color/white"
     />
 
 
@@ -43,10 +43,10 @@
         android:id="@+id/addExercise"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@color/black"
         android:padding="10dp"
         android:text="+ Add new exercise"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="25sp"/>
 
 </LinearLayout>
