--- a/app/src/main/res/layout/display_routines.xml
+++ b/app/src/main/res/layout/display_routines.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/black"
     android:orientation="vertical"
     >
 
@@ -12,7 +12,7 @@
         android:id="@+id/routineToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/toolbar"
+        android:background="@color/dark_gray"
         android:minHeight="?attr/actionBarSize"
         />
 
@@ -20,7 +20,6 @@
         android:id="@+id/routines"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="@android:color/darker_gray"
         android:dividerHeight="0.1dp"
         />
 
