--- a/app/src/main/res/layout/exercise_popup.xml
+++ b/app/src/main/res/layout/exercise_popup.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/white"
+    android:background="@color/black"
     android:orientation="vertical"
     >
 
@@ -17,7 +17,7 @@
         android:id="@+id/popupToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/toolbar"
+        android:background="@color/dark_gray"
         android:minHeight="?attr/actionBarSize"
         />
 
