--- a/app/src/main/res/layout/display_routines.xml
+++ b/app/src/main/res/layout/display_routines.xml
@@ -12,7 +12,7 @@
         android:id="@+id/routineToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/dark_gray"
+        android:background="@color/toolbar"
         android:minHeight="?attr/actionBarSize"
         />
 
