--- a/app/src/main/res/layout/display_workout.xml
+++ b/app/src/main/res/layout/display_workout.xml
@@ -10,7 +10,7 @@
         android:id="@+id/routineToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/dark_gray"
+        android:background="@color/toolbar"
         android:minHeight="?attr/actionBarSize" />
 
     <View
@@ -40,6 +40,7 @@
         <Button
             android:id="@+id/calendar"
             android:layout_width="40dp"
+            android:background="@color/buttonCol"
             android:layout_height="40sp"
             />
 
@@ -62,6 +63,7 @@
             android:id="@+id/addData"
             android:layout_width="100sp"
             android:layout_height="40sp"
+            android:background="@color/buttonCol"
             android:text="Add data"
 
             />
