--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#383838</color>
     <color name="red">#FF0000</color>
     <color name="orange">#FFA500</color>
     <color name="yellow">#FFFF00</color>
