--- a/app/src/main/res/layout/listview_item.xml
+++ b/app/src/main/res/layout/listview_item.xml
@@ -5,7 +5,7 @@
     android:layout_height="fill_parent">
 
     <TextView
-        android:id="@+id/routine_content"
+        android:id="@+id/content"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:padding="10sp"
