--- a/app/src/main/res/layout/exercise_progress.xml
+++ b/app/src/main/res/layout/exercise_progress.xml
@@ -16,4 +16,22 @@
         android:minHeight="?attr/actionBarSize"
         />
 
+    <com.google.android.material.tabs.TabLayout
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
+
+        <com.google.android.material.tabs.TabItem
+            android:text="Table"
+            android:textColor="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <com.google.android.material.tabs.TabItem
+            android:text="Graph"
+            android:textColor="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    </com.google.android.material.tabs.TabLayout>
+
 </LinearLayout>
