--- a/app/src/main/res/layout/display_routines.xml
+++ b/app/src/main/res/layout/display_routines.xml
@@ -21,6 +21,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:dividerHeight="0.1dp"
+        android:clickable="true"
+        android:focusable="false"
         />
 
 </LinearLayout>
