--- a/app/src/main/res/layout/fragment_progress_table.xml
+++ b/app/src/main/res/layout/fragment_progress_table.xml
@@ -26,7 +26,17 @@
 
     <View
         android:layout_width="wrap_content"
-        android:layout_height="25sp" />
+        android:layout_height="15sp" />
+
+    <Spinner
+        android:id="@+id/orderFilter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="35sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
